TEST_PROGRAMS/VALID/jonathan_campbell/remainder.min
# compute remainder

var x: int;
var y: int;
var z: int;

# setting vars to random vals
x = 11;
y = 5;

z = x / y;

z = x - z * y;

print z;
