TEST_PROGRAMS/INVALID/brendan_gordon/stateB4Dec.min
x = y + z;
y = z*x;
z = z*y+x;

var x: int;
var y: float;
var z: int;

